...
      ),
      body: SafeArea(
        bottom: false,
        child: Column(
          children: [
            PageHeader(
              title: 'Taleplerim',
              action: const HeaderActions(),
            ),
            const SizedBox(height: 16),
            ColoredBox(
              color: AppColors.gray50,
              child: FilterPills(
...
